<resources>
    <string name="Logo" translatable="false">Virtual Browser</string>
    <string name="search_for_stores">Search for Stores</string>
    <string name="version_code" translatable="false">VB v1.1.1</string>
    <string name="terms_conditions"><![CDATA[Terms & conditions]]></string>
    <string name="right" translatable="false"><![CDATA[>]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="Store_name">Garden City</string>
    <string name="Opening_hours">Open today from 9:00 to 18:00</string>
    <string name="stores">Stores</string>
    <string name="centre_nav">Navigation</string>
    <string name="centre_info">Centre info</string>
    <string name="promotion">Promotion</string>
    <string name="profile">Profile</string>
    <string name="feedback">Feedback</string>
    <string name="login">Login</string>
    <string name="open_now">Open now</string>
    <string name="OpeningHours">Mon-Friday: 10:00am - 5:00pm</string>
    <string name="WeekendOpeningHours">Sat-Sunday: 9:00am - 9:00pm</string>
    <string name="storePhone" translatable="false">(07) 3088 3350</string>
    <string name="StoreLocation" translatable="false">91 Queen St, Brisbane City QLD 4000</string>
    <string name="storeParkingInfo">Free parking for 4 hours on L2</string>
    <string name="left" translatable="false"><![CDATA[<]]></string>
    <string name="shopping_centres">Shopping Centres</string>
    <string name="Myer_Brisbane"><u>Myer, Brisbane City</u></string>
    <string name="shopping_experience">Shopping Experience</string>
    <string name="app_experience">App experience</string>
    <string name="suggestion">Suggestion</string>
    <string name="input_feedback_here">Input Feedback Here</string>
    <string name="submit">Submit</string>
    <string name="david_jones_brisbane_city"><u>David Jones, Brisbane City</u></string>
    <string name="toowong_village_toowong"><u>Toowong Village, Toowong</u></string>
    <string name="westfield_garden_city"><u>Westfield, Garden City</u></string>
    <string name="indooroopilly_shooping_centre_indooropilly"><u>Indooroopilly shooping centre, \nIndooropilly</u></string>
    <string name="app_name">Virtual Browser</string>
    <string name="welcome_page_title_virtual" translatable="false">VIRTUAL</string>
    <string name="welcome_page_title_browser" translatable="false">BROWSER</string>
    <string name="welcome_search_bar_hint">Search stores and more</string>
    <string name="welcome_page_select_customer">Customer</string>
    <string name="welcome_page_select_storeOwner">Store Owner</string>
    <string name="welcome_page_select_guest">Guest</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_title" translatable="false">Virtual Browser</string>
    <string name="login_to_register">Register</string>
    <string name="register_label">Registration</string>
    <string name="no_account"><u>Or set up an account</u></string>
    <string name="register_email_hint">Email</string>
    <string name="register_conform_password">Confirm password</string>
    <string name="register_address_one">Address Line 1</string>
    <string name="register_address_two">Address Line 2</string>
    <string name="register_bottom">Terms &amp; conditions ></string>
    <string name="register_bottom_two">Privacy Policy</string>
    <string name="version_number" translatable="false">VB v1.1.1</string>
    <string name="Profile_name" translatable="false">PETT</string>
    <string name="Profile_email" translatable="false">Pett.pegment123@gmail.com</string>
    <string name="Profile_address" translatable="false">87 Roma Street\n\nBrisbane City \n\nQLD 4000</string>
    <string name="edit">Edit</string>
    <string name="log_out">Log out</string>
    <string name="Promotion_store" translatable="false">Event Cinema</string>
    <string name="show_on_map">Show on Map</string>
    <string name="open_time">Open time</string>
    <string name="Store_OpeningHour">Mon-Fri: 05:30 pm - 09:00pm</string>
    <string name="Store_OpeningHourHoliday">Sat - Sun: 10:00am - 12:00pm</string>
    <string name="location">Location</string>
    <string name="Store_Location" translatable="false">Event Cinema, Level 4</string>
    <string name="terms_and_policy"><![CDATA[< Terms and Policy]]></string>
    <string name="_2019_hungryrose" translatable="false">Ⓒ2019 HungryRose</string>
    <string name="version">Version</string>
    <string name="medium_lemons">Medium Lemons</string>
    <string name="stock_0">Stock: 0</string>
    <string name="management"><u>Management</u></string>
</resources>